--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,17 +29,23 @@ android {
             includeAndroidResources = true
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'NASA_API_KEY', NasaApiKey
+    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation "org.robolectric:robolectric:4.4"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     implementation 'com.jakewharton:butterknife:10.2.3'
