--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moringaschool.myspace">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,14 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SecondActivity" />
-        <activity android:name=".SignUpActivity"/>
-        <activity android:name=".MainActivity"
+        <activity android:name=".models.LoginActivity" />
+        <activity android:name=".models.SecondActivity" />
+        <activity android:name=".models.SignUpActivity"/>
+        <activity android:name=".models.MainActivity"
             android:label="@string/app_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.myspace.MainActivity">
+                android:value="com.moringaschool.myspace.models.MainActivity">
             </meta-data>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
