--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,31 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moringaschool.myspace">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:hardwareAccelerated="false"
-        android:largeHeap="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".models.LoginActivity" />
-        <activity android:name=".models.SecondActivity" />
-        <activity android:name=".models.SignUpActivity"/>
-        <activity android:name=".models.MainActivity"
+        <activity android:name=".ui.MarsActivity" />
+        <activity android:name=".ApodsActivity" />
+        <activity android:name=".ui.ApodDetailActivity" />
+        <activity android:name=".ui.ApodsListActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".SecondActivity" />
+        <activity android:name=".SignUpActivity" />
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.myspace.models.MainActivity">
-            </meta-data>
+                android:value="com.moringaschool.myspace.MainActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
