--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     annotationProcessor 'org.parceler:parceler:1.1.12'
 }
 apply plugin: 'com.android.application'
