--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MarsActivity" />
+        <activity android:name=".MarsActivity" />
         <activity android:name=".ApodsActivity" />
         <activity android:name=".ui.ApodDetailActivity" />
         <activity android:name=".ui.ApodsListActivity" />
