--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.12.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
-    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-auth:20.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
