--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,14 +20,14 @@
         <activity android:name=".ui.ApodDetailActivity" />
         <activity android:name=".ui.ApodsListActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".SecondActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".SignUpActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SecondActivity"
             android:label="@string/app_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.myspace.MainActivity" />
+                android:value="com.moringaschool.myspace.SecondActivity" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
